# ug-thesis

./: .gitignore  README.md  pyproject.toml
3_Data/: 1_download_corpora.py  2_collate_tablets.py  5_split.py  README.md
3_Data/1_glyphs_and_transliterations/: 1_download_corpora.py  2_collate_tablets.py  3_clean_up_transliterations.py  4_add_glyphs.py  4_create_lookups.py  5_add_glyphs.py  README.md  analysis.ipynb
3_Data/2_photos/: 1_merge.py  2_download_images.py  3_upload_to_backblaze.py
3_Data/3_translations/: collect_and_upload_generated.py  format_cdli.py  translate.py
4_Encoder/: encoder.ipynb
5_Transliteration/: fine_tune_encoder_decoder.py  seq2seq.ipynb
