[tool.poetry]
name = "ug-thesis"
version = "0.1.0"
description = ""
authors = ["Cole Simmons <colesimmons223@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
tqdm = "^4.66.2"
sumeripy = {git = "https://github.com/colesimmons/sumeripy.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
